Personal card changed

--- a/src-main/blocks/person-card/person-card.pug
+++ b/src-main/blocks/person-card/person-card.pug
@@ -29,8 +29,9 @@ mixin place-btn(name)
                 div(class="height info-item")
                     img(src="/assets/img/icon-height.svg", alt="")
                     p 171
+            .btn-flag
     .person-card__nav
-        button.nav-invite(disabled="disabled") Пригласить
+        button.nav-invite Пригласить
         .nav-btns
             .nav-prev
             .nav-cancel
