Aside message and invite added

--- a/src-main/assets/scss/main.scss
+++ b/src-main/assets/scss/main.scss
@@ -50,6 +50,8 @@ h2 {
 @import "../../blocks/filters/filters";
 @import "../../blocks/header/header";
 @import "../../blocks/person-card/person-card";
+@import "../../blocks/message-aside/message-aside";
+@import "../../blocks/invite-aside/invite-aside";
 
 // Pages
 @import "../../assets/scss/modules/main-page.scss";
