--- a/src-main/main-page.pug
+++ b/src-main/main-page.pug
@@ -13,6 +13,7 @@ html(lang='ru')
       include ./blocks/photo-name/photo-name
       include ./blocks/switcher/switcher
       include ./blocks/messages/messages
+      include ./blocks/invites/invites
     main.other-persons
       include ./blocks/header/header
       .card-container
