--- a/src-main/blocks/switcher/switcher.pug
+++ b/src-main/blocks/switcher/switcher.pug
@@ -1,3 +1,7 @@
 .switcher
-    div(class="switcher__item swith-checked") Сообщения
-    div(class="switcher__item") Приглашения
+    div(class="switcher__item swith-checked") 
+        .message-text Сообщения
+        div(class="message-amount switcher__amount") 4
+    div(class="switcher__item") 
+        .invite-text Приглашения
+        div(class="invite-amount switcher__amount") 12
