--- a/src-main/blocks/switcher/switcher.scss
+++ b/src-main/blocks/switcher/switcher.scss
@@ -5,6 +5,9 @@
     border-radius: 12px;
 
     &__item {
+        display: flex;
+        justify-content: center;
+        align-items: center;
         padding: 7px;
         width: 50%;
         font-weight: 500;
@@ -25,5 +28,17 @@
         letter-spacing: -0.00615385em;
         color: #FF4D67;
         border-radius: 10px;
+    }
+    &__amount {
+        height: 22px;
+        width: 22px;
+        margin-left: 13px;
+        border-radius: 50%;
+        background: linear-gradient(90deg, #FF0099 -30%, #FFAA2D 133.33%);
+
+        font-weight: 500;
+        font-size: 15px;
+        letter-spacing: -0.00615385em;
+        color: #FFFFFF;
     }
 }
