--- a/src-main/blocks/invites/invites.pug
+++ b/src-main/blocks/invites/invites.pug
@@ -1,5 +1,5 @@
 include ../invite-aside/invite-aside.pug
 
-.invites
+div(class="invites hide")
     +invite("Артем, 25", "Бричмулу", "9 часов")
     +invite("Сергей, 22", "Макдоналдс", "12 часов")
