--- a/src-main/blocks/switcher/switcher.pug
+++ b/src-main/blocks/switcher/switcher.pug
@@ -1,5 +1,5 @@
 .switcher
-    div(class="switcher__item swith-checked") 
+    div(class="switcher__item switch-checked") 
         .message-text Сообщения
         div(class="message-amount switcher__amount") 4
     div(class="switcher__item") 
