--- a/src-main/main-page.pug
+++ b/src-main/main-page.pug
@@ -18,5 +18,5 @@ html(lang='ru')
       include ./blocks/header/header
       .card-container
         include ./blocks/person-card/person-card
-    script(src="/js/main.js")
-    script(src="/js/vendors.js")
+    script(defer src="/js/main.js")
+    script(defer src="/js/vendors.js")
