--- a/src-reg/blocks/code-input/code-input.pug
+++ b/src-reg/blocks/code-input/code-input.pug
@@ -1,7 +1,7 @@
-.code-input
-    .code-input__number
-    .code-input__number
-    .code-input__number
-    .code-input__number
-    .code-input__number
-    .code-input__number
+div(class="code-input hide")
+    input(type="text" name="code" class="code-input__number")
+    input(type="text" name="code" class="code-input__number")
+    input(type="text" name="code" class="code-input__number")
+    input(type="text" name="code" class="code-input__number")
+    input(type="text" name="code" class="code-input__number")
+    input(type="text" name="code" class="code-input__number")
