--- a/src-main/assets/scss/utils/reset.scss
+++ b/src-main/assets/scss/utils/reset.scss
@@ -56,6 +56,7 @@ textarea {
 }
 input, textarea, select, button { outline: none; border: none; font-size: 100%; margin: 0;}
 button, input { line-height: normal; }
+button:active { padding: 0; }
 
 // Table
 table { border-collapse: collapse; border-spacing: 0; }
