--- a/src-main/blocks/person-card/person-card.scss
+++ b/src-main/blocks/person-card/person-card.scss
@@ -1,7 +1,38 @@
 @import '../photo-slider/vertical-slider.scss';
 
 .person-card {
+    padding-bottom: 28px;
+
+    &__invite-done {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+
+        font-weight: bold;
+        font-size: 22px;
+        line-height: 30px;
+        color: white;
+
+        background: rgba(0, 0, 0, 0.15);
+        backdrop-filter: blur(30px);
+        border-radius: 20px;
+
+        img {
+            margin-bottom: 22px;
+        }
+        p {
+            width: 300px;
+            text-align: center;
+        }
+    }
+
     &__container {
+        position: relative;
         display: flex;
         width: 782px;
         height: 552px;
@@ -34,6 +65,7 @@
         justify-content: space-evenly;
 
         .place-btn {
+            cursor: pointer;
             width: 132px;
             padding: 15px 0;
             border: 1.5px solid #FFFFFF;
@@ -106,12 +138,13 @@
     }
 
     &__nav {
-        position: relative;
+        position: absolute;
         display: flex;
         margin-top: -28px;
         z-index: 10;
 
         .nav-invite {
+            cursor: pointer;
             margin-left: 127px;
             display: flex;
             justify-content: center;
@@ -126,6 +159,7 @@
             color: #FFFFFF;
 
             &:disabled {
+                cursor: auto;
                 background: none;
                 background-color: #E5E5E5;
                 color: #A3A3A3;
