--- a/src-reg/assets/scss/modules/register-page.scss
+++ b/src-reg/assets/scss/modules/register-page.scss
@@ -43,6 +43,7 @@
     color: white;
 }
 .phone-btn {
+    cursor: pointer;
     margin-top: 32px;
     margin-bottom: 14px;
     display: flex;
@@ -65,6 +66,7 @@
     }
 }
 .fb-btn {
+    cursor: pointer;
     margin-bottom: 40px;
     display: flex;
     justify-content: center;
@@ -84,4 +86,42 @@
     img {
         margin-right: 23px;
     }
+}
+.phone-input {
+    margin-top: 15px;
+    margin-bottom: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-self: center;
+    width: 333px;
+    height: 65px;
+    background: #FFFFFF;
+    box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.2);
+    border-radius: 17px;
+
+    text-align: center;
+    font-family: Raleway;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 23px;
+    color: #484848;
+}
+.confirm-phone {
+    width: 168px;
+    height: 40px;
+
+    cursor: pointer;
+    margin-top: 10px;
+    margin-bottom: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-self: center;
+    background: linear-gradient(92.52deg, #FF0099 7.05%, #FFAA2D 90.17%);
+    border-radius: 15px;
+
+    font-weight: 600;
+    font-size: 16px;
+    color: #FFFFFF;
 }
