--- a/src-reg/register-page.pug
+++ b/src-reg/register-page.pug
@@ -15,27 +15,30 @@ html(lang='ru')
         .register-header
             img(src="/assets/img/logo.svg", alt="Firstep")
         .register-chat
-            +message-gray('Привет!')
-            +message-gray('Давай выберем способ авторизации в приложении (Нажми на одну из кнопок ниже)')
+            +message-gray('', 'Привет!')
+            +message-gray('', 'Давай выберем способ авторизации в приложении (Нажми на одну из кнопок ниже)')
             button.phone-btn 
                 img(src="/assets/img/icon-phone.svg", alt="")
                 p Номер телефона
             button.fb-btn 
                 img(src="/assets/img/icon-fb.svg", alt="")
                 p Facebook
-            +message-pink('По номеру телефона')
-            +message-gray('Введи свой номер телефона')
-            input(type="tel" name="phone")
-            button.phone-btn Send Message
-            +message-pink('+7 905-205-65-66')
-            +message-gray('Сейчас на твой номер придет код, введи его в поле ниже')
-            input(type="text" name="code")
-            button.code-btn Confirm Code
-            div.recaptcha-container
+            +message-pink('phone hide', 'По номеру телефона')
+            +message-gray('phone hide', 'Введи свой номер телефона')
+            input(type="tel" name="phone" class="phone phone-input hide" placeholder="Введи номер телефона")
+            button(class="phone confirm-phone hide" id="confirm-phone") Подтвердить
+            +message-pink('confirm hide', '+7 905-205-65-66')
+            +message-gray('confirm hide', 'Сейчас на твой номер придет код, введи его в поле ниже')
+            include ./blocks/code-input/code-input
+            +message-pink('person-info hide', '')
+            +message-gray('person-info hide', 'А теперь познакомимся. Напиши свое имя')
 
     script(src="https://www.gstatic.com/firebasejs/7.18.0/firebase-app.js")
     script(src="https://www.gstatic.com/firebasejs/7.18.0/firebase-analytics.js")
     script(src="https://www.gstatic.com/firebasejs/7.18.0/firebase-auth.js")
 
-    script(src="/js/reg.js")
-    script(src="/js/vendors.js")
+    script
+      include ./js/init-facebook.js
+
+    script(defer src="/js/reg.js")
+    script(defer src="/js/vendors.js")
