Made one by one input in code

--- a/src-reg/blocks/code-input/code-input.pug
+++ b/src-reg/blocks/code-input/code-input.pug
@@ -1,7 +1,7 @@
 div(class="code-input hide")
-    input(type="text" name="code" class="code-input__number")
-    input(type="text" name="code" class="code-input__number")
-    input(type="text" name="code" class="code-input__number")
-    input(type="text" name="code" class="code-input__number")
-    input(type="text" name="code" class="code-input__number")
-    input(type="text" name="code" class="code-input__number")
+    input(type="number" name="code" class="code-input__number" autocomplete="off" tabindex=0)
+    input(type="number" name="code" class="code-input__number" autocomplete="off" tabindex=1)
+    input(type="number" name="code" class="code-input__number" autocomplete="off" tabindex=2)
+    input(type="number" name="code" class="code-input__number" autocomplete="off" tabindex=3)
+    input(type="number" name="code" class="code-input__number" autocomplete="off" tabindex=4)
+    input(type="number" name="code" class="code-input__number" autocomplete="off" tabindex=5)
