--- a/src-reg/blocks/code-input/code-input.scss
+++ b/src-reg/blocks/code-input/code-input.scss
@@ -23,8 +23,16 @@
         letter-spacing: -0.016em;
         color: #484848;
 
+        -moz-appearance:textfield; /* Firefox */
+
         &:last-child {
             margin-right: 0;
+        }
+        &::-webkit-outer-spin-button,
+        &::-webkit-inner-spin-button {
+            /* display: none; <- Crashes Chrome on hover */
+            -webkit-appearance: none;
+            margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
         }
     }
 }
