Changed phone input

--- a/src-reg/assets/scss/main.scss
+++ b/src-reg/assets/scss/main.scss
@@ -48,6 +48,7 @@ h2 {
 // @import "../../blocks/phone-number/intlTelInput.scss";
 // @import '../../../node_modules/intl-tel-input/build/css/intlTelInput.css';
 @import "../../blocks/code-input/code-input";
+@import "../../blocks/phone-number/intlTelInput.scss";
 
 .hide {
   display: none;
