--- a/src-reg/assets/scss/modules/register-page.scss
+++ b/src-reg/assets/scss/modules/register-page.scss
@@ -87,26 +87,26 @@
         margin-right: 23px;
     }
 }
-.phone-input {
-    margin-top: 15px;
-    margin-bottom: 15px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    align-self: center;
-    width: 333px;
-    height: 65px;
-    background: #FFFFFF;
-    box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.2);
-    border-radius: 17px;
+// .phone-input {
+//     margin-top: 15px;
+//     margin-bottom: 15px;
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+//     align-self: center;
+//     width: 333px;
+//     height: 65px;
+//     background: #FFFFFF;
+//     box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.2);
+//     border-radius: 17px;
 
-    text-align: center;
-    font-family: Raleway;
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 23px;
-    color: #484848;
-}
+//     text-align: center;
+//     font-family: Raleway;
+//     font-weight: 500;
+//     font-size: 20px;
+//     line-height: 23px;
+//     color: #484848;
+// }
 .confirm-phone {
     width: 168px;
     height: 40px;
