Chat and profile

--- a/src-main/blocks/person-card/person-card.pug
+++ b/src-main/blocks/person-card/person-card.pug
@@ -1,7 +1,7 @@
 mixin place-btn(name)
   .place-btn= name
 
-.person-card
+div(class="person-card")
     .person-card__container
         .person-card__photo
             include ../photo-slider/photo-slider
