--- a/src-main/assets/scss/main.scss
+++ b/src-main/assets/scss/main.scss
@@ -53,6 +53,8 @@ h2 {
 @import "../../blocks/message-aside/message-aside";
 @import "../../blocks/invite-aside/invite-aside";
 @import "../../blocks/invites/invites";
+@import "../../blocks/profile/profile";
+@import "../../blocks/chat/chat";
 
 // Pages
 @import "../../assets/scss/modules/main-page.scss";
