Added slider in profile

--- a/src-main/blocks/profile/profile.pug
+++ b/src-main/blocks/profile/profile.pug
@@ -1,5 +1,4 @@
-.profile
-    button.close-btn
+div(class="profile")
     img(src="/assets/img/man1.jpg" alt="")
     div(class="text")
         p.profile__name Serman, 23
