Made chenges in design

--- a/src-main/blocks/chat/chat.pug
+++ b/src-main/blocks/chat/chat.pug
@@ -6,7 +6,7 @@ mixin message-grad(type, text)
     div(class="message-grad "+ type)
         .message= text
 
-.chat
+div(class="chat")
     header.chat-header
         .chat-header__left
             img(src="/assets/img/man.jpg", alt="")
