--- a/src-main/blocks/photo-name/photo-name.pug
+++ b/src-main/blocks/photo-name/photo-name.pug
@@ -1,3 +1,5 @@
 .photo-name
     .photo-name__photo
-    .photo-name__name Ольга
+    .photo-name__name 
+        p.name Ольга
+        span.rewrite Редактировать профиль
