--- a/src-main/blocks/switcher/switcher.scss
+++ b/src-main/blocks/switcher/switcher.scss
@@ -1,6 +1,7 @@
 .switcher {
     display: flex;
     background-color: #F2F6FB;
+    margin: 0 20px;
     padding: 2px;
     border-radius: 12px;
     cursor: pointer;
