--- a/src-main/blocks/chat/chat.scss
+++ b/src-main/blocks/chat/chat.scss
@@ -16,6 +16,7 @@
             align-items: center;
 
             img {
+                cursor: pointer;
                 margin-right: 15px;
             }
             .name {
