--- a/src-main/blocks/invite-aside/invite-aside.scss
+++ b/src-main/blocks/invite-aside/invite-aside.scss
@@ -1,8 +1,7 @@
 .invite-aside {
     display: flex;
     align-items: center;
-    margin-top: 22px;
-    margin-bottom: 22px;
+    margin: 22px 20px;
 
     &__photo {
         width: 54px;
