--- a/src-main/blocks/profile/profile.scss
+++ b/src-main/blocks/profile/profile.scss
@@ -1,4 +1,5 @@
 .close-btn {
+    cursor: pointer;
     z-index: 10;
     background-color: #ACB4BE;
     background-image: url('/assets/img/btn-white-cross.svg');
@@ -13,7 +14,6 @@
     flex: 0 0 290px;
 
     .close-btn {
-        cursor: pointer;
         position: absolute;
         right: 22px;
         top: 15px;
@@ -25,7 +25,6 @@
     overflow: hidden;
     .profile {
         width: 100%;
-        background-color: #FCD5C4;
 
         font-weight: 500;
         font-size: 14px;
@@ -33,7 +32,9 @@
         color: #4B4B4B;
 
         .text {
+            margin: 1px 0;
             padding: 15px 20px 20px;
+            background-color: #FCD5C4;
         }
 
         &__name {
