--- a/src-reg/assets/scss/modules/register-page.scss
+++ b/src-reg/assets/scss/modules/register-page.scss
@@ -19,12 +19,13 @@
 }
 .message {
     display: inline-block;
-    max-width: 300px;
-    font-size: 18px;
-    line-height: 21px;
+    font-size: 16px;
+    line-height: 19px;
     letter-spacing: -0.016em;
 }
 .message-gray {
+    max-width: 285px;
+
     align-self: flex-start;
     background-color: #ECECEC;
     border-radius: 16px;
@@ -34,6 +35,8 @@
     color: #484848;
 }
 .message-pink {
+    max-width: 260px;
+
     align-self: flex-end;
     background-color: #FF6D83;
     border-radius: 16px;
@@ -41,6 +44,13 @@
     padding: 10px 20px;
 
     color: white;
+}
+// Добавляем разную ширину у текстовых блоков
+.confirm {
+    max-width: 265px;
+}
+.person-info {
+    max-width: 225px;
 }
 .phone-btn {
     cursor: pointer;
@@ -57,8 +67,8 @@
     border-radius: 17px;
 
     font-weight: 500;
-    font-size: 20px;
-    line-height: 23px;
+    font-size: 18px;
+    line-height: 21px;
     color: #484848;
 
     img {
