Complain window done

--- a/src-main/assets/scss/main.scss
+++ b/src-main/assets/scss/main.scss
@@ -55,6 +55,7 @@ h2 {
 @import "../../blocks/invites/invites";
 @import "../../blocks/profile/profile";
 @import "../../blocks/chat/chat";
+@import "../../blocks/complaint/complaint";
 
 // Pages
 @import "../../assets/scss/modules/main-page.scss";
