--- a/src-main/main-page.pug
+++ b/src-main/main-page.pug
@@ -15,6 +15,7 @@ html(lang='ru')
       include ./blocks/messages/messages
       include ./blocks/invites/invites
     div(class="other-persons")
+      include ./blocks/complaint/complaint
       include ./blocks/header/header
       .card-container
         include ./blocks/person-card/person-card
