--- a/src-main/blocks/filters/filters.pug
+++ b/src-main/blocks/filters/filters.pug
@@ -1,4 +1,6 @@
 .filters
     .filters__icon
-        img(src="/assets/img/filters.svg", alt="Иконка фильтра")
+        img(class="gray-icon" src="/assets/img/filters.svg", alt="Иконка фильтра")
+        img(class="pink-icon hide" src="/assets/img/filters-active.svg", alt="Иконка фильтра")
     .filters__text Фильтры
+    .filters__container
