--- a/src-main/assets/scss/main.scss
+++ b/src-main/assets/scss/main.scss
@@ -56,6 +56,7 @@ h2 {
 @import "../../blocks/profile/profile";
 @import "../../blocks/chat/chat";
 @import "../../blocks/complaint/complaint";
+@import "../../blocks/no-internet/no-internet";
 
 // Pages
 @import "../../assets/scss/modules/main-page.scss";
