--- a/src-main/assets/scss/modules/main-page.scss
+++ b/src-main/assets/scss/modules/main-page.scss
@@ -34,3 +34,25 @@
     flex: 1 0 auto;
     display: flex;
 }
+
+.problems-container {
+    width: 780px;
+    height: 550px;
+    margin-bottom: 100px;
+    border: 1px solid #DADADA;
+    border-radius: 18px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    p {
+        margin-top: 50px;
+        max-width: 420px;
+        font-size: 16px;
+        line-height: 19px;
+        text-align: center;
+        color: #888888;
+    }
+}
