--- a/src-main/blocks/complaint/complaint.pug
+++ b/src-main/blocks/complaint/complaint.pug
@@ -1,4 +1,4 @@
-div(class="complaint hide")
+div(class="complaint")
     .complaint__container 
         .close-btn
         .complaint__top
@@ -25,6 +25,7 @@ div(class="complaint hide")
                     label.custom-checkbox
                         input(type="checkbox", value="other", name="complaint_5")
                         span Другое
-            textarea(class="hide slidee" autofocus placeholder="Напишите сюда подробное описание вашей жалобы на анкету.")
+            div(class="textarea-container hide")
+                textarea(class="" autofocus placeholder="Напишите сюда подробное описание вашей жалобы на анкету.")
         .comlaint__bottom
             button(class="send-complaint" disabled) Отправить
