--- a/src-reg/assets/scss/modules/register-page.scss
+++ b/src-reg/assets/scss/modules/register-page.scss
@@ -52,6 +52,9 @@
 .person-info {
     max-width: 222px;
 }
+.sex {
+    max-width: 251px; 
+}
 .phone-btn {
     cursor: pointer;
     margin-top: 32px;
@@ -97,27 +100,28 @@
         margin-right: 23px;
     }
 }
-// .phone-input {
-//     margin-top: 15px;
-//     margin-bottom: 15px;
-//     display: flex;
-//     justify-content: center;
-//     align-items: center;
-//     align-self: center;
-//     width: 333px;
-//     height: 65px;
-//     background: #FFFFFF;
-//     box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.2);
-//     border-radius: 17px;
+.name-input,
+.sex-male,
+.sex-female {
+    margin-top: 15px;
+    padding: 0 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-self: center;
+    width: 332px;
+    height: 65px;
+    background: #FFFFFF;
+    box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.2);
+    border-radius: 17px;
 
-//     text-align: center;
-//     font-family: Raleway;
-//     font-weight: 500;
-//     font-size: 20px;
-//     line-height: 23px;
-//     color: #484848;
-// }
-.confirm-phone {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 23px;
+    color: #484848;
+}
+.confirm-phone,
+.send-name {
     width: 168px;
     height: 40px;
 
