--- a/src-reg/register-page.pug
+++ b/src-reg/register-page.pug
@@ -33,6 +33,13 @@ html(lang='ru')
             include ./blocks/code-input/code-input
             +message-pink('person-info ', '111111')
             +message-gray('person-info ', 'А теперь познакомимся. Напиши свое имя')
+            input(type="text" class="name-input")
+            button(class="name send-name ") Далее
+            +message-pink('name ', 'Ян')
+            +message-gray('sex', 'Приятно познакомиться, Ян. Теперь выбери свой пол')
+            button(class="sex-male ") Я мужчина
+            button(class="sex-female ") Я женщина
+
 
     script(src="https://www.gstatic.com/firebasejs/7.18.0/firebase-app.js")
     script(src="https://www.gstatic.com/firebasejs/7.18.0/firebase-analytics.js")
