Background for filters modified

--- a/src-main/assets/scss/main.scss
+++ b/src-main/assets/scss/main.scss
@@ -48,6 +48,7 @@ h2 {
 @import "../../blocks/switcher/switcher";
 @import "../../blocks/messages/messages";
 @import "../../blocks/filters/filters";
+@import "../../blocks/filters-modal/filters-modal";
 @import "../../blocks/header/header";
 @import "../../blocks/person-card/person-card";
 @import "../../blocks/message-aside/message-aside";
