Added inputs photo and data in reg page

--- a/src-main/blocks/filters-modal/filters-modal.pug
+++ b/src-main/blocks/filters-modal/filters-modal.pug
@@ -7,7 +7,7 @@ mixin switcher(a, b, c)
         div(class="switcher__item") 
             .switcher-text= c
 
-div(class="filters-modal ")
+div(class="filters-modal hide")
     div(class="filters-modal__container")
             button.btn-close-gray
             .display-for-me
