--- a/src-main/blocks/photo-slider/photo-slider.pug
+++ b/src-main/blocks/photo-slider/photo-slider.pug
@@ -1,4 +1,5 @@
 .photo-slider
+    img(src="/assets/img/cursor-no.svg" class="box-pointer hide cursor")
     .frame 
         ul.items
             li
