--- a/src-reg/assets/scss/main.scss
+++ b/src-reg/assets/scss/main.scss
@@ -49,6 +49,8 @@ h2 {
 // @import '../../../node_modules/intl-tel-input/build/css/intlTelInput.css';
 @import "../../blocks/code-input/code-input";
 @import "../../blocks/phone-number/intlTelInput.scss";
+@import "../../blocks/input-img/input-img.scss";
+@import "../../blocks/date-input/date-input.scss";
 
 .hide {
   display: none;
