--- a/src-reg/register-page.pug
+++ b/src-reg/register-page.pug
@@ -39,6 +39,8 @@ html(lang='ru')
             +message-gray('sex', 'Приятно познакомиться, Ян. Теперь выбери свой пол')
             button(class="sex-male ") Я мужчина
             button(class="sex-female ") Я женщина
+            include ./blocks/date-input/date-input
+            include ./blocks/input-img/input-img
 
 
     script(src="https://www.gstatic.com/firebasejs/7.18.0/firebase-app.js")
