--- a/src-reg/assets/scss/modules/register-page.scss
+++ b/src-reg/assets/scss/modules/register-page.scss
@@ -109,6 +109,7 @@
     justify-content: center;
     align-items: center;
     align-self: center;
+    text-align: center;
     width: 332px;
     height: 65px;
     background: #FFFFFF;
