--- a/src-reg/assets/scss/main.scss
+++ b/src-reg/assets/scss/main.scss
@@ -45,12 +45,12 @@ h2 {
 
 // Pages
 @import "../../assets/scss/modules/register-page";
-// @import "../../blocks/phone-number/intlTelInput.scss";
-// @import '../../../node_modules/intl-tel-input/build/css/intlTelInput.css';
 @import "../../blocks/code-input/code-input";
+@import "../../blocks/phone-number/phone-number.scss";
 @import "../../blocks/phone-number/intlTelInput.scss";
 @import "../../blocks/input-img/input-img.scss";
 @import "../../blocks/date-input/date-input.scss";
+@import "../../blocks/choose-enter/choose-enter.scss";
 
 .hide {
   display: none;
