--- a/src-reg/assets/scss/modules/register-page.scss
+++ b/src-reg/assets/scss/modules/register-page.scss
@@ -7,13 +7,19 @@
 }
 
 .register-header {
+    width: 600px;
+    position: fixed;
+    background-color: #FBFBFB;
     img {
         display: block;
-        margin: 15px auto;
+        margin: 0 auto;
+        margin-top: 15px;
+        margin-bottom: 5px;
     }
 }
 
 .register-chat {
+    padding-top: 75px;
     display: flex;
     flex-direction: column;
 }
@@ -55,51 +61,7 @@
 .sex {
     max-width: 251px; 
 }
-.phone-btn {
-    cursor: pointer;
-    margin-top: 32px;
-    margin-bottom: 14px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    align-self: center;
-    width: 333px;
-    height: 65px;
-    background: #FFFFFF;
-    box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.2);
-    border-radius: 17px;
 
-    font-weight: 500;
-    font-size: 18px;
-    line-height: 21px;
-    color: #484848;
-
-    img {
-        margin-right: 23px;
-    }
-}
-.fb-btn {
-    cursor: pointer;
-    margin-bottom: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    align-self: center;
-    width: 333px;
-    height: 65px;
-    background: #007AFF;
-    box-shadow: 0px 0px 2px #007AFF;
-    border-radius: 17px;
-
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 23px;
-    color: #FFFFFF;
-
-    img {
-        margin-right: 23px;
-    }
-}
 .name-input,
 .sex-male,
 .sex-female {
@@ -121,7 +83,7 @@
     line-height: 23px;
     color: #484848;
 }
-.confirm-phone,
+
 .send-name {
     width: 168px;
     height: 40px;
