--- a/src-reg/blocks/code-input/code-input.scss
+++ b/src-reg/blocks/code-input/code-input.scss
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     margin-top: 25px;
-    margin-bottom: 25px;
+    margin-bottom: 10px;
 
     &__number {
         display: flex;
@@ -33,6 +33,20 @@
             /* display: none; <- Crashes Chrome on hover */
             -webkit-appearance: none;
             margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
+        }
+    }
+
+    &__timer {
+        text-align: center;
+        font-family: 'Raleway',sans-serif;
+        font-size: 18px;
+        line-height: 21px;
+        letter-spacing: -0.016em;
+        color: #484848;
+
+        .pink {
+            color: #FF4D67;
+            font-weight: bold;
         }
     }
 }
