Modified js in name input

--- a/src-reg/blocks/name-input/name-input.pug
+++ b/src-reg/blocks/name-input/name-input.pug
@@ -2,5 +2,5 @@
 +message-gray('person-info ', 'А теперь познакомимся. Напиши свое имя')
 div(class="name-input name")
     input(type="text" class="name")
-    button(class="name-input__clear")
+    button(class="name-input__clear hide")
 button(class="name send-name ") Далее
