--- a/src-reg/register-page.pug
+++ b/src-reg/register-page.pug
@@ -19,8 +19,8 @@ html(lang='ru')
             include ./blocks/phone-number/phone-number
             include ./blocks/code-input/code-input
             include ./blocks/name-input/name-input
-            +message-pink('name ', 'Ян')
-            +message-gray('sex', 'Приятно познакомиться, Ян. Теперь выбери свой пол')
+            +message-pink('name name-message ', 'Ян')
+            +message-gray('sex welcome-message', 'Приятно познакомиться, Ян. Теперь выбери свой пол')
             button(class="sex-male ") Я мужчина
             button(class="sex-female ") Я женщина
             include ./blocks/date-input/date-input
