Added js in gender btns

--- a/src-reg/assets/scss/main.scss
+++ b/src-reg/assets/scss/main.scss
@@ -47,6 +47,7 @@ h2 {
 @import "../../assets/scss/modules/register-page.scss";
 @import "../../blocks/code-input/code-input.scss";
 @import "../../blocks/name-input/name-input.scss";
+@import "../../blocks/gender-input/gender-input.scss";
 @import "../../blocks/phone-number/phone-number.scss";
 @import "../../blocks/phone-number/intlTelInput.scss";
 @import "../../blocks/input-img/input-img.scss";
