--- a/src-reg/blocks/name-input/name-input.scss
+++ b/src-reg/blocks/name-input/name-input.scss
@@ -27,9 +27,7 @@
     margin-top: 15px;
     padding: 0 15px;
     
-    
-    //align-self: center;
-    //text-align: center;
+    align-self: center;
     
     background: #FFFFFF;
     box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.2);
