--- a/src-reg/blocks/name-input/name-input.pug
+++ b/src-reg/blocks/name-input/name-input.pug
@@ -3,4 +3,4 @@
 div(class="name-input name")
     input(type="text" class="name")
     button(class="name-input__clear hide")
-button(class="name send-name ") Далее
+button(class="name send-name next-btn") Далее
