--- a/src-reg/assets/scss/main.scss
+++ b/src-reg/assets/scss/main.scss
@@ -50,6 +50,7 @@ h2 {
 @import "../../blocks/gender-input/gender-input.scss";
 @import "../../blocks/phone-number/phone-number.scss";
 @import "../../blocks/phone-number/intlTelInput.scss";
+@import "../../blocks/places/places.scss";
 @import "../../blocks/input-img/input-img.scss";
 @import "../../blocks/date-input/date-input.scss";
 @import "../../blocks/choose-enter/choose-enter.scss";
