--- a/src-reg/assets/scss/modules/register-page.scss
+++ b/src-reg/assets/scss/modules/register-page.scss
@@ -9,6 +9,7 @@
 .register-header {
     width: 600px;
     position: fixed;
+    z-index: 10;
     background-color: #FBFBFB;
     img {
         display: block;
