--- a/src-reg/blocks/date-input/date-input.pug
+++ b/src-reg/blocks/date-input/date-input.pug
@@ -1,54 +1,34 @@
++message-pink('gender-message ', 'Мужчина')
++message-gray('date ', 'Введи дату рождения')
 div(class="date-input")
     div(class="date-input__date select")
         input(type="hidden" class="select__input" name="")
         .select__head День
+        - var day = 1;
         ul(class="select__list ")
-            li.select__item 1
-            li.select__item 2
-            li.select__item 3
-            li.select__item 4
-            li.select__item 5
-            li.select__item 6
-            li.select__item 7
-            li.select__item 8
-            li.select__item 9
-            li.select__item 10
-            li.select__item 11
-            li.select__item 12
-            li.select__item 13
-            li.select__item 14
-            li.select__item 15
-            li.select__item 16
-            li.select__item 17
-            li.select__item 18
-            li.select__item 19
-            li.select__item 20
-            li.select__item 21
-            li.select__item 22
-            li.select__item 23
-            li.select__item 24
-            li.select__item 25
-            li.select__item 26
-            li.select__item 27
-            li.select__item 28
-            li.select__item 29
-            li.select__item 30
-            li.select__item 31
+            while day < 32
+                li.select__item= day++
     div(class="date-input__month select")
         input(type="hidden" class="select__input" name="")
         .select__head Месяц
         ul(class="select__list ")
+            li.select__item Январь
+            li.select__item Февраль
+            li.select__item Март
+            li.select__item Апрель
+            li.select__item Май
+            li.select__item Июнь
+            li.select__item Июль
+            li.select__item Август
             li.select__item Сентябрь
             li.select__item Октябрь
             li.select__item Ноябрь
             li.select__item Декабрь
-            li.select__item Январь
     div(class="date-input__year select")
         input(type="hidden" class="select__input" name="")
         .select__head Год
+        - var year = 1960;
         ul(class="select__list ")
-            li.select__item 1999
-            li.select__item 2000
-            li.select__item 2222
-            li.select__item 2002
-            li.select__item 2003
+            while year <= 2003
+                li.select__item= year++
+button(class="next-btn ") Далее
