--- a/src-reg/blocks/date-input/date-input.scss
+++ b/src-reg/blocks/date-input/date-input.scss
@@ -1,6 +1,8 @@
 .date-input {
     display: flex;
     justify-content: center;
+    margin-top: 15px;
+    margin: 15px 0 5px 0;
 
     &__date {
         width: 92px;
@@ -15,15 +17,10 @@
     }
 }
 
-
-
 .select {
     position: relative;
     display: block;
-    //min-width: 220px;
-    //width: 100%;
-    //max-width: 400px;
-    //margin-bottom: 20px;
+
     font-size: 17px;
     line-height: 20px;
     color: #484848;
@@ -31,7 +28,7 @@
 
 .select__head {
     width: 100%;
-    //max-width: 100%;
+    min-height: 50px;
     background: #FFFFFF;
     box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.2);
     border-radius: 12px;
@@ -65,7 +62,7 @@
     background: #fff;
     box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.2);
     border-radius: 12px;
-    max-height: 300px;
+    max-height: 290px;
     overflow-x: hidden;
     overflow-y: auto;
     z-index: 100;
