--- a/src-reg/register-page.pug
+++ b/src-reg/register-page.pug
@@ -20,10 +20,11 @@ html(lang='ru')
             include ./blocks/code-input/code-input
             include ./blocks/name-input/name-input
             include ./blocks/gender-input/gender-input
-            +message-pink('gender-message ', 'Мужчина')
-            +message-gray('date ', 'Введи дату рождения')
             include ./blocks/date-input/date-input
+            +message-pink('date ', '5.09.1995')
+            +message-gray('photo ', 'Загрузи одну или несколько своих фото')
             include ./blocks/input-img/input-img
+            include ./blocks/places/places
 
 
     script(src="https://www.gstatic.com/firebasejs/7.18.0/firebase-app.js")
