--- a/src-reg/blocks/places/places.pug
+++ b/src-reg/blocks/places/places.pug
@@ -1,23 +1,69 @@
-+message-gray('places ', 'Мы почти закончили, осталось выбрать три твоих любимых заведения (ретораны, бары или кофейни')
-+message-gray('places ', 'Просто начни вводит названия твоих любимых мест в поля ввода.')
-div(class="places-input select")
-        .select__head
-            input(type="text" class="places" name="")
-            button(class="places-input__clear ")
-        ul(class="select__list ")
-            li.select__item day++
-            li.select__item day++
-            li.select__item day++
-            li.select__item day++
-            li.select__item day++
-            li.select__item day++
-            li.select__item day++
-            li.select__item day++
-            li.select__item day++
-            li.select__item day++
-            li.select__item day++
-            li.select__item day++
-            li.select__item day++
-            li.select__item day++
-            li.select__item day++
-            li.select__item day++
++message-gray('places-mess ', 'Мы почти закончили, осталось выбрать три твоих любимых заведения (ретораны, бары или кофейни')
++message-gray('places-mess ', 'Просто начни вводит названия твоих любимых мест в поля ввода.')
+div(class="places p1")
+    .places__head
+        input(type="text" class="places-input" name="" placeholder="Введи любимое заведение")
+        button(class="places__clear hide")
+        button(class="places__open")
+    ul(class="places__list hide")
+        li.places__item Mама на даче
+        li.places__item Мамалыга
+        li.places__item Макаронники
+        li.places__item Марчеллис
+        li.places__item Макаронники
+        li.places__item Marco Polo
+        li.places__item Марчеллис
+        li.places__item Mама на даче
+        li.places__item Мамалыга
+        li.places__item Макаронники
+        li.places__item Марчеллис
+        li.places__item Макаронники
+        li.places__item Marco Polo
+        li.places__item Марчеллис
+
+div(class="places p2")
+    .places__head
+        input(type="text" class="places-input" name="" placeholder="Введи любимое заведение")
+        button(class="places__clear hide")
+        button(class="places__open")
+    ul(class="places__list hide")
+        li.places__item Mама на даче
+        li.places__item Мамалыга
+        li.places__item Макаронники
+        li.places__item Марчеллис
+        li.places__item Макаронники
+        li.places__item Marco Polo
+        li.places__item Марчеллис
+        li.places__item Mама на даче
+        li.places__item Мамалыга
+        li.places__item Макаронники
+        li.places__item Марчеллис
+        li.places__item Макаронники
+        li.places__item Marco Polo
+        li.places__item Марчеллис
+
+div(class="places p3")
+    .places__head
+        input(type="text" class="places-input" name="" placeholder="Введи любимое заведение")
+        button(class="places__clear hide")
+        button(class="places__open")
+    ul(class="places__list hide")
+        li.places__item Mама на даче
+        li.places__item Мамалыга
+        li.places__item Макаронники
+        li.places__item Марчеллис
+        li.places__item Макаронники
+        li.places__item Marco Polo
+        li.places__item Марчеллис
+        li.places__item Mама на даче
+        li.places__item Мамалыга
+        li.places__item Макаронники
+        li.places__item Марчеллис
+        li.places__item Макаронники
+        li.places__item Marco Polo
+        li.places__item Марчеллис
+
++message-pink('places-rezult ', 'Старбакс')
++message-pink('places-rezult ', 'Старбакс')
++message-pink('places-rezult ', 'Старбакс')
++message-gray('places-mess ', 'Анкета готова. Мы рады видеть тебя в приложении')
