--- a/src-reg/blocks/date-input/date-input.scss
+++ b/src-reg/blocks/date-input/date-input.scss
@@ -42,7 +42,7 @@
     display: block;
     width: 14px;
     height: 8px;
-    background-image: url('/assets/img/black-arrow.svg');
+    background-image: url('/assets/img/gray-arrow.svg');
     background-repeat: no-repeat;
     background-position: center center;
 
@@ -66,10 +66,7 @@
     overflow-x: hidden;
     overflow-y: auto;
     z-index: 100;
-    //margin: 0;
     padding: 5px 0;
-    //font-size: 14px;
-    //color: #424348;
     scrollbar-color: dark;
     scrollbar-width: thin;
     overscroll-behavior: contain;
