--- a/src-reg/blocks/places/places.scss
+++ b/src-reg/blocks/places/places.scss
@@ -1,26 +1,84 @@
-.places-input {
+.places {
     align-self: center;
     width: 320px;
+    margin: 5px 0;
 
-    .select__head {
+    //position: relative;
+    display: block;
+
+    font-size: 17px;
+    line-height: 20px;
+    color: #484848;
+
+    &__head {
         display: flex;
         justify-content: space-between;
         align-items: center;
+        padding: 15px 20px;
+
+        width: 100%;
+        min-height: 50px;
+        background: #FFFFFF;
+        box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.2);
+        border-radius: 12px;
+
+        cursor: pointer;
 
         &::after {
             display: none;
         }
+    }
 
-        .select__input {
-            flex: 1 0 auto;
+    &__input {
+        flex: 1 0 auto;
+    }
+
+    &__list{
+        display: block;
+        padding: 10px 20px;
+        margin-top: 10px;
+
+        background: #fff;
+        box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.2);
+        border-radius: 12px;
+        max-height: 290px;
+        overflow-x: hidden;
+        overflow-y: auto;
+        z-index: 100;
+        padding: 10px 20px;
+        scrollbar-color: dark;
+        scrollbar-width: thin;
+        overscroll-behavior: contain;
+
+        &::-webkit-scrollbar {
+            width: 5px;
+            background-color: white;
+        }
+        
+        &::-webkit-scrollbar-thumb {
+            border-radius: 1px;
+            background-color: #E7E7E7;
         }
     }
 
-    .select__list {
-        padding: 10px 20px;
+    &__item {
+        border-bottom: 1px solid rgba(233, 233, 233, 0.62);
+        padding: 4px 0 4px;
+        cursor: pointer;
+        list-style-type: none;
+
+        font-size: 14px;
+        line-height: 22px;
+        letter-spacing: -0.0241176em;
+
+        color: #383434;
+
+        &:hover {
+            background-color: #F8F8F8;
+        }
     }
 
-    .places-input__clear {
+    &__clear {
         cursor: pointer;
         width: 14px;
         height: 14px;
@@ -33,7 +91,15 @@
         background-size: contain;
     }
 
-    .select__item {
-        border-bottom: 1px solid rgba(233, 233, 233, 0.62);
+    &__open {
+        cursor: pointer;
+        z-index: 5;
+        width: 14px;
+        height: 14px;
+        background-color: white;
+        background-image: url('/assets/img/gray-arrow.svg');
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-size: contain;
     }
 }
